2005-11-19	Florian Boor <florian.boor@kernelconcepts.de>

	* timeanddate.c: Fix time computation with DST set, fixing #1258.

2005-11-17	Florian Boor <florian.boor@kernelconcepts.de>

	* theme.c: Disable xsettings notification client before changing settings.

2005-11-14	Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Change window size behaviour because of looking ugly on 480x640.

2005-11-09	Florian Boor <florian.boor@kernelconcepts.de>

	* battery.c: Try to make apm info parsing independent from locale.
	* main.c, main-info.c: Remove bad hardcoded window widget size.
	
2005-11-08	Florian Boor <florian.boor@kernelconcepts.de>

	* theme.c: Allow smaller fonts.

2005-10-30	Florian Boor <florian.boor@kernelconcepts.de>

	* Release Version 0.1.26
	* Makefile: Version to 0.1.26
	
2005-10-27	Florian Boor <florian.boor@kernelconcepts.de>

	* tools/interface.c: Work around a gtk/pango bug, make text look nicer.
	* network.c: Improve dialog design.
	* sleep/interface.c, users/interface.c, main.c, applets.h: Get rid of 
	   useless style stuff.
	* keys.c: Shortened tab title.
	* keyctl.c: Hack entry to have an appropriate size. Some minor fixes.

2005-10-24	Florian Boor <florian.boor@kernelconcepts.de>

	* Makefile: Add Slovenian translation. Thanks to Matej Urbančič for
                    this contribution.

2005-10-08	Florian Boor <florian.boor@kernelconcepts.de>

	* HACKING: Remove some finished work from todo.
	* network.c: Global proxy settings instead of dillorc.
	             Rename "table" to better matching "notebook".
	* applets.c, main.c, kbd.c, keyboard.c, network.c, main-info.c, 
	  users/interface.c, sleep/interface.c, timeanddate.c, ownerinfo.c, theme.c:
      Change deprecated GTK_OBJECT stuff to G_OBJECT.

2005-10-07	Florian Boor <florian.boor@kernelconcepts.de>

    * main.c, cardinfo.c, network.c, applets.h: Change user inferface to 
	  use toolbars instead of dialog like button box. Several minor fixes.
